src/test/deca/syntax/invalid/created/miscellaneous/include_circular_1.deca
// Description :
//    inclusion circulaire
//
// Resultats :
//		Syntaxe error

#include "include_circular_2.deca"